--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
             <head>
-				<meta charset="UTF-8">
- 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
-   				<meta name="viewport" content="width=device-width, initial-scale=1.0">
-                   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta charset="UTF-8">
+ 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+   		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                 <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-                <link rel="icon" type="image/png" sizes="32x32" href="assests\img\Boy.png">
+                <link rel="icon" type="image/png" sizes="32x32" href="./Boy.png">
                 <title>Saksham Shukla</title>
             </head>
 <style>
-		*{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
  
-
 /* Assigning all the same properties to the body */
 body{
     height: 100vh;
@@ -96,11 +95,9 @@ a:hover{
 .details{
     margin-bottom: 1.8em;
 }
- 
- 
+  
 /* CSS for messagin link */
- 
-.effect {
+ .effect {
     text-align: center;
     display: inline-block;
     position: relative;
@@ -144,7 +141,7 @@ text-indent: 0;
 
     <div class="container">
         <div class="user-image">
-            <img src="assests\img\Me1.jpg"
+            <img src="./Me1.jpg"
             alt="this image contains user-image">
         </div>
  
@@ -176,5 +173,4 @@ text-indent: 0;
         crossorigin="anonymous">
     </script>-->
 </body>
- 
 </html>
